2005-04-25 Pierrick LE GALL

	* include/config.inc.php becomes include/config_default.inc.php :
	this file should not be modified. A new file
	include/config_local.inc.php can be used for overwriting
	configuration parameters
	
2005-04-25 Pierrick LE GALL

	* come back to previous version of include/constants.php :
	%PWGVERSION% was not a mistake

2005-04-25 Pierrick LE GALL

	* profile.php is no longer used for listing users :
	admin/user_list.php comes back (as in 1.3 branch)

	* user list updated : ability to filter list on username

2005-04-25 Gweltas

	* ability to install even if file include/mysql.inc.php doesn't
	exist

	* monthly statistics

	* installation labels updated (english only)

2005-04-16 Pierrick LE GALL <pierrick /at/ phpwebgallery {dot} net>

	* elements batch management : element_set page becomes the
	frontend to element_set_global and element_set_unit, infos_images
	(after a long time of use) become deprecated : the more powerful
	element_set is used instead. Consequently, batch management
	concerns caddie but also "normal categories".
	
	* refactoring code in admin.php to include the sub-file (clearer)

	* caddie : function fill_caddie replaces the code in category.php
	and can be used in admin/element_set.php

	* caddie : caddie table is added in delete_elements function

2005-04-16 Pierrick LE GALL <pierrick /at/ phpwebgallery {dot} net>

	* elements batch management : in addition to global mode, a unit
	mode is added : ability to manage a set of elements, element by
	element. This screen is very close to the existing "infos_images"
	(which will soon disappear).

	* elements batch management : in screen element_set_global, the
	display options are displayed at the top as in element_set_unit
	
2005-04-11 Pierrick LE GALL <pierrick /at/ phpwebgallery {dot} net>

	* functions get_day_list and get_month_list moved from search.php
	to include/functions.inc.php : these functions are now also used
	in admin/element_set_global.php
